--- a/Backend/render.yaml
+++ b/Backend/render.yaml
@@ -1,10 +1,8 @@
 services:
   - type: web
     name: fastapi-backend
-    runtime: python
-    buildCommand: ""
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 8000
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10
-      
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
+    workingDir: backend
+    plan: free
